# Agentic-RAG-Research

./: .env.example  .gitignore  .pre-commit-config.yaml  AI-Agents.code-workspace  ARCHITECTURE.md  Makefile  README.md  logging.txt  pyproject.toml
configs/agents/: base_agent.yaml  coordination_agent.yaml  email_agent.yaml  rag_agent.yaml  web_search_agent.yaml
configs/architectures/: example_architecture.yaml  simple_architecture.yaml
configs/eval/: eval_config.yaml
configs/schemas/: agent_schemas.py
rag_eval/: dataset_generator.py  eval_graph.py  evaluation_dataset_loader.py  report_generator.py  run_dataset_generator.py  run_eval.py
rag_eval/analysis/: chunking_indexing_strategy.md
rag_eval/components/: analysis_report_generator.py  dataset_generator.py  eval_graph.py  eval_report_generator.py  evaluation_dataset_loader.py  report_generator.py  structured_rag_retriever.py
rag_eval/datasets/: 20260225_dataset_batch_1.csv  20260225_dataset_batch_2.csv  20260225_dataset_batch_3.csv  KB_testing_dataset.csv
rag_eval/schemas/: analysis_schemas.py  dataset_schemas.py  eval_schemas.py
rag_eval/tools/: ragas_eval_tool.py
rag_eval/utils/: compute_aggregate_metrics.py  file_handling.py
src/: __init__.py  constants.py  main.py
src/agents/: base_agent.py  base_agent_2.py
src/architectures/: __init__.py
src/core/: agent_state.py  architecture_manager.py  execution_service.py  logging_setup.py  state.py
src/knowledge_base/ingestion/: confluence_content_extractor.py  confluence_page_processor.py  file_saver.py  pdf_to_markdown_converter.py  url_to_md_converter.py
src/knowledge_base/pipeline/: PDF_to_KB.py  PDF_to_KB_Pipeline.py  knowledge_base_pipeline.py
src/knowledge_base/processing/: gemini_embedder.py  pinecone_sparse_embedder.py  retry.py  text_chunker.py  vector_normalizer.py
src/knowledge_base/vector_db/: create_vector_db_index.py  upsert_to_vector_db.py
src/schemas/: agent_schemas.py  architecture_schemas.py
src/tools/: embed_input.py  embed_user_query_tool.py  perform_rag_tool.py  rag_retriever.py
src/utils/: __init__.py  application_streamer.py  architecture_diagram_generator.py  config_loader.py  process_events.py
tests/: __init__.py  conftest.py
tests/integration/knowledge_base/: test_text_chunker.py  test_text_chunker_integration.py
tests/unit/agents/: test_base_agent.py
tests/unit/core/: test_execution_service.py
tests/unit/knowledge_base/ingestion/: test_confluence_content_extractor.py  test_confluence_page_processor.py  test_pdf_to_markdown_converter.py  test_url_to_md_converter.py
tests/unit/knowledge_base/pipeline/: test_knowledge_base_pipeline.py
tests/unit/knowledge_base/processing/: test_gemini_embedder.py  test_pinecone_sparse_embedder.py  test_retry.py  test_text_chunker.py  test_vector_normalizer.py
tests/unit/knowledge_base/vector_db/: test_create_vector_db_index.py  test_upsert_to_vector_db.py
tests/unit/rag_eval/: test_eval_report_generator.py  test_evaluation_dataset_loader.py  test_report_generator.py
tests/unit/tools/: test_perform_rag_tool.py  test_rag_retriever.py
tests/unit/utils/: test_application_streamer.py  test_architecture_diagram_generator.py  test_config_loader.py  test_process_events.py
