[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Building and testing different AI agents and agentic system architectures"
authors = [
    {name = "Cheyanne Allred-Lopez", email = "cea33@students.uwf.edu"}
]
requires-python = ">=3.11, <3.13"

dependencies = [
    # --- Orchestration & Frameworks ---
    "langchain~=1.2.0",               # Core framework for building agentic applications
    "langgraph~=1.0.5",               # Graph-based orchestration for multi-agent workflows
    "pydantic>=2.0.0",                # Data validation and settings management (Schema definition)
    "python-dotenv>=1.2.1",           # Loads environment variables (API keys) from .env files
    "PyYAML>=6.0",                    # Parsing YAML configuration files (Agent configs)

    # --- AI Models & Providers ---
    "langchain-google-genai~=4.2",    # Interface for Google Gemini models
    "langchain-openai>=1.1.7",        # Interface for OpenAI GPT models + EdenAI models
    
    # --- Vector Database & Embeddings ---
    "pinecone>=7.3.0",                # Pinecone Vector Database client + Pinecone sparse embedding model
    "langchain-pinecone>=0.2.13",     # LangChain integration for Pinecone
    "langchain-text-splitters>=1.1.0",# Tools for chunking text for embedding
    "numpy>2.0.0",                    # Used for normalizing vector embeddings

    # --- Document Processing & Ingestion ---
    "langchain-docling>=2.0.0",       # PDF parsing for KB
    "opencv-python>=4.13",            
    "requests>=2.32.5",               # HTTP client for API calls (Confluence page tree scraping)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "pylint>=2.12.0",
    "mypy>=0.950",
    "types-PyYAML>=6.0.0",
    "pre-commit>=2.20.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pylint]
max-line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]