[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Building and testing different AI agents and agentic system architectures"
authors = [
    {name = "Cheyanne Allred-Lopez", email = "cea33@students.uwf.edu"}
]
requires-python = ">=3.11, <3.13"

dependencies = [
    # --- Orchestration & Frameworks ---
    "langchain~=1.2.0",               # Core framework for building agentic applications
    "langgraph~=1.0.5",               # Graph-based orchestration for multi-agent workflows
    "pydantic>=2.0.0",                # Data validation and settings management (Schema definition)
    "python-dotenv>=1.2.1",           # Loads environment variables (API keys) from .env files
    "PyYAML>=6.0",                    # Parsing YAML configuration files (Agent configs)

    # --- AI Models & Providers ---
    "langchain-google-genai~=4.2",    # Interface for Google Gemini models
    "langchain-openai>=1.1.7",        # Interface for OpenAI GPT models + EdenAI models
    
    # --- Vector Database & Embeddings ---
    "pinecone[grpc]>=7.3.0",          # Pinecone Vector Database client + gRPC for PineconeGRPC
    "langchain-text-splitters>=1.1.0",# Tools for chunking text for embedding
    "numpy>2.0.0",                    # Used for normalizing vector embeddings

    # --- Document Processing & Ingestion ---
    "langchain-docling>=2.0.0",       # PDF parsing for KB
    "requests>=2.32.5",               # HTTP client for API calls (Confluence page tree scraping)
    "python-frontmatter>=1.1.0",      # YAML frontmatter parsing for Confluence markdown files
    "beautifulsoup4>=4.12.0",         # HTML parsing for Confluence content extraction
    "lxml>=5.0.0",                    # Fast HTML/XML parser backend for BeautifulSoup
    "markdownify>=0.13.0",            # Converts HTML to Markdown (Confluence pages)
    "regex>=2024.0.0",                # Advanced regex engine for Confluence content cleanup
    "google-genai>=1.0.0",            # Google GenAI SDK (error types used in base_agent)
]

[project.optional-dependencies]
eval = [
    "ragas>=0.4.0",                   # RAGAS framework for RAG retrieval evaluation metrics
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0"
]

[tool.black]
line-length = 120                      # Matches pylint
target-version = ['py312']

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name (snake_case vs CamelCase conflicts)
    "W1203",  # logging-fstring-interpolation (allow f-strings in logs)
    "W0511",  # fixme (don't fail on TODO comments)
    "R0903",  # too-few-public-methods (allow simple classes)
]

[tool.mypy]                     
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]